--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "custom-env": "^1.0.0",
     "express": "^4.16.4",
     "express-paginate": "^1.0.0",
     "lodash": "^4.17.11",
