--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "custom-env": "^1.0.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-paginate": "^1.0.0",
     "lodash": "^4.17.11",
